[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameField.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]

[node name="MainRoot" type="Node2D"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 900.0
margin_bottom = 900.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 900.0
margin_bottom = 34.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 690.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TargetFPS" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 690.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 234, 705.354 )
text = "Target FPS: 0"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActualFPS" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 690.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 234, 705.354 )
text = "Actual FPS: 0"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZeroButton" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 694.0
margin_right = 714.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0
text = "0"

[node name="FifteenButton" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 718.0
margin_right = 746.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0
text = "15"

[node name="ThirtyButton" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 750.0
margin_right = 778.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0
text = "30"

[node name="SixtyButton" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 782.0
margin_right = 810.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0
text = "60"

[node name="ClearButton" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 814.0
margin_right = 858.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0
text = "Clear"

[node name="GunButton" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 862.0
margin_right = 900.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0
text = "Gun"

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 900.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameField" parent="VBoxContainer/ViewportContainer" instance=ExtResource( 1 )]
size = Vector2( 900, 862 )
handle_input_locally = false
render_target_update_mode = 3
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ZeroButton" to="." method="_on_ZeroButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FifteenButton" to="." method="_on_FifteenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ThirtyButton" to="." method="_on_ThirtyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SixtyButton" to="." method="_on_SixtyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GunButton" to="." method="_on_GunButton_pressed"]
[connection signal="actual_speed_changed" from="VBoxContainer/ViewportContainer/GameField" to="." method="_on_GameField_actual_speed_changed"]
[connection signal="target_speed_changed" from="VBoxContainer/ViewportContainer/GameField" to="." method="_on_target_speed_changed"]
